Fix submit button border radius on iOS

--- a/app/assets/stylesheets/map.css.sass
+++ b/app/assets/stylesheets/map.css.sass
@@ -50,7 +50,7 @@ h2
   display: inline-block
   background: none
   border: none
-  border-radius: none
+  border-radius: 0
   margin: 0
   padding: 0
 
